--- a/index.html
+++ b/index.html
@@ -416,9 +416,9 @@ function onWatchSuccess(position)
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
 <div  style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
-	<div style='float:left;'><img src='but_info.png'></div>
-	<div id='infodiv' style='float:right; width:250px; border:1px solid red; color:Black;'></div>
-<!--	<div style='float:right;'><img src='but_register.png'></div>-->
+	<a style='float:left; margin-top:5px; margin-left: 5px;'  href='Javascript: show_settings();'><img src='but_info.png'></a>
+	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>
+	<div style='float:right;'><img src='but_register.png'></div>
 
 
 </div>
@@ -442,7 +442,7 @@ function onWatchSuccess(position)
 
 
 
-	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:252; background-color:yellow; color:white; '><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center></div>
+	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center></div>
 	
 		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
@@ -476,13 +476,13 @@ function onWatchSuccess(position)
 <a href='Javascript:zoomme(1);' style='position:fixed; bottom:85px; right:5px; margin:5px; z-index:252;'><img src='zoomin.png'></a>
 <a href='Javascript:zoomme(-1);'style='position:fixed; bottom:45px; right:5px; margin:5px; z-index:252;'><img src='zoomout.png'></a>
 <a href='Javascript: setme();' style='position:fixed; bottom:130px; right:5px; margin:5px; z-index:252; ' ><img id='cbut' src='centeroff.png'></a>
-<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>
+<!--<a href='Javascript: show_settings();' style='position:fixed; top:55px; right:5px; margin:5px; z-index:252;' ><img src='settings.png'></a>-->
 
 
 
 		<div id="bottom_menu" style='border:1px solid green; width:100%; position:fixed; bottom:0px; left:0px; height:41px; z-index:251; background-color:#3f3f3f; filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9;'>
 			<img src='phone.png'>
-			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; border:1px solid red;'></div>
+			<div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 		</div>
 
 	</div>
@@ -543,7 +543,7 @@ if (newstat!=mystatus)
 	if (mystatus==1)
 		{
 		uplimit=1;
-		document.getElementById("info_text").innerHTML="ტაქსის ძიება";
+		document.getElementById("info_text").innerHTML="მიმდინარეობს ტაქსის ძიება";
 		document.getElementById("call_but").style.display="none";
 		document.getElementById("arrived_screen").style.display="none";
 		}
