--- a/index.html
+++ b/index.html
@@ -335,8 +335,8 @@ function onResume()
 
 function onSuccess(position) 
 	{
-console.log("on success");
-		
+	console.log("on success");
+	document.getElementById("GPS_search_screen").style.display="none";
 	var element = document.getElementById('geopos');
 	element.innerHTML = 'Latitude: '           + position.coords.latitude              + '<br />' +
                             'Longitude: '          + position.coords.longitude             + '<br />';
@@ -353,7 +353,7 @@ console.log("on success");
 
 	wlon=MyLong;
 	wlat=MyLat;
-console.log("on succ, sett long");
+	console.log("on succ, sett long");
 
 	if (started==0 && MyUser!="nouser")	{Start();}
 
@@ -416,9 +416,9 @@ function onWatchSuccess(position)
 	<div id='fanjara' style='position:relative; overflow:hidden; width:400px; height:600px;'>
 		
 <div  style='position:fixed; left:0px; top:0px; width:100%; height:50px; background-color:white; z-index:211; ' >
-	<a style='float:left; margin-top:5px; margin-left: 5px;'  href='Javascript: show_settings();'><img src='but_info.png'></a>
+	<a style='float:left; margin-top:7px; margin-left: 7px;'  href='Javascript: show_settings();'><img src='but_info.png'></a>
 	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>
-	<div style='float:right;'><img src='but_register.png'></div>
+	<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut' ><img src='but_register.png'></a>
 
 
 </div>
@@ -444,6 +444,10 @@ function onWatchSuccess(position)
 
 	<div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><br><br><center>თქვენი ტაქსი ადგილზეა<br><Br><a href='javascript: chamovdivar();' style='color:white; background-color:green; padding:10px; text-align:center; border:1px solid gray;'>ჩამოვდივარ</a></center></div>
 	
+
+<div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:black; color:white; '><br><br><br><br><br><br><br><br><br><br><br><center>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
+	
+
 		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
 		</div>
