--- a/index.html
+++ b/index.html
@@ -212,9 +212,11 @@ function update_data()
 				if (a[0]=="searching_taxi")
 					{
 					change_status(1);
+					document.getElementById("taxi_search_screen").style.display="inline";
 					}
 				else if (a[0]=="taxi_moving")
 					{
+					document.getElementById("taxi_search_screen").style.display="none;
 					change_status(2);
 					b=a[1].split(";");
 					if (b[0]!="")
@@ -226,6 +228,7 @@ function update_data()
 					}
 				else if (a[0]=="taxi_arrived")
 					{
+											document.getElementById("taxi_search_screen").style.display="none;
 					change_status(3);
 					b=a[1].split(";");
 					if (b[0]!="")
@@ -237,6 +240,7 @@ function update_data()
 					}
 				else if (a[0]=="taxi_waiting")
 					{
+											document.getElementById("taxi_search_screen").style.display="none;
 					change_status(4);
 					b=a[1].split(";");
 					if (b[0]!="")
@@ -247,6 +251,7 @@ function update_data()
 					}
 				else if (a[0]=="you_moving")
 					{
+											document.getElementById("taxi_search_screen").style.display="none;
 					change_status(5);
 					b=a[1].split(";");
 					if (b[0]!="")
@@ -446,7 +451,9 @@ function onWatchSuccess(position)
 	
 
 <div id='GPS_search_screen'  style='display:inline; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:301; background-color:black; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... მიმდინარეობს თქვენი ლოკაციის დადგენა ...</center></div>
-	
+
+	<div id='taxi_search_screen'  style='display:none; position:fixed; top:0px; left:0px;  width:365px; height:650px; z-index:302; background-color:black; color:white; '><br><br><br><br><br><br><br><br><center> <img src='taxi_icon.png'><br><br>... უახლოესი თავისუფალი ტაქსის ძიება ...</center></div>
+
 
 		<!-- MOUSE OVER LAYER -->
 		<div id='mouser' style='position:absolute; left:0px;top:50px; width:400px; height:620px; z-index:250; border:1px solid red;' ontouchstart="mdown(event);" ontouchend="mup();"  ontouchmove="getmousecoord(event);">
@@ -970,7 +977,8 @@ function call_taxi()
 	gamehttp.open('GET',url,true);
 	gamehttp.send(null);
 	
-
+	document.getElementById("taxi_search_screen").style.display="inline";
+	
 
 	
 	}
