--- a/www/index.html
+++ b/www/index.html
@@ -46,9 +46,8 @@
  <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
   </div>-->
-  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; '>
-    <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img
-            src='resources/but_info.png'></a>
+  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; border:1px solid red;'>
+    <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
     <!--<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
             src='resources/but_register.png'></a>-->
@@ -90,8 +89,7 @@
     </div>
     <!--key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ-->
     <!--key=AIzaSyAMaeW61XOXEKHCrzM6J5nulpyZpeeTb4k-->
-    <script async defer
-            src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ&callback=initMap&language=ka&libraries=places"></script>
+    <script async defer         src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAFY47FE__z9AvRLBoYG0T2XeOTiHdwzOQ&callback=initMap&language=ka&libraries=places"></script>
 
     <div id='arrived_screen'  style='display:none; position:fixed; top:50px; left:0px;  width:400px; height:620px; z-index:300; background-color:#e3b202; color:white; '>
 
@@ -120,7 +118,7 @@
 
 
 	<div id='dirinfo' style='color:black; background-color:white; padding:10px;'></div>
-	<div id='driver_info' style='color:black;background-color:white; padding:10px;'></div>
+	<div id='driver_info' style='position:fixed; bottom:30px; left:15%px; height:100px; width:70%px; z-index:252; color:black; background-color:white; padding:10px; border:1px solid gray;'></div>
 
     <a id='call_but' style='position:fixed; bottom:30px; left:80px; height:100px; width:210px; z-index:252;  '
        href='Javascript: call_taxi();'><img src='resources/gamodzaxeba.svg' style='width:210px; height:100px;'></a>
