--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
  <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
   </div>-->
-  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; border:1px solid red;'>
+  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; '>
     <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
     <!--<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
@@ -54,12 +54,26 @@
 <!--<div class="pac-card" id="pac-card">
         <div>-->
         
+<style>
 
+#pac-input{width:174px;  border:1px solid #13ae48;  border-radius:4px;padding:3px; background-color:white; color:black;}
+#pac-input2{width:174px;  border:1px solid #ecac00; border-radius:4px;padding:3px;background-color:white; color:black;}
+
+#pac-input2:focus {
+    background-color:#e8b427; 
+}
+
+#pac-input:focus {
+    background-color:#32e875;
+	color:white;
+}
+
+</style>
         <!--  <div id="pac-container"> -->
             <table width=100%><Tr><td style='color:Black;' align=center><b>დაწყება</b></td><td style='color:Black;' align=center><b>დასრულება</b></td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' style='width:174px; background-color:#32e875; border:1px solid #13ae48;  border-radius:3px;'></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();' style='width:174px; background-color:#e8b427;  border:1px solid #ecac00; border-radius:3px;'></td></tr>
+			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' ></td>
+			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
 			</table>
 		
      <!--     </div>-->
@@ -131,7 +145,7 @@
 
 
     <div id="bottom_menu"
-         style=' width:100%; position:fixed; bottom:0px; left:0px; height:31px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
+         style=' width:210; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
     <!--  <img src='resources/phone.png'>-->
       <div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
