--- a/www/index.html
+++ b/www/index.html
@@ -46,7 +46,7 @@
  <!-- <div style="width: 100%; position:fixed; top:45px;z-index:272; text-align: center;">
         <span id='topMessage' style="color:black;  margin:5px; ">აირჩიეთ საწყისი ლოკაცია</span>
   </div>-->
-  <div style='position:fixed; left:0px; top:0px; width:100%; height:80px; background-color:#ffce00; z-index:211; '>
+  <div style='position:fixed; left:0px; top:0px; width:100%; height:100px; background-color:#ffce00; z-index:211; padding-top:20px;'>
     <a style='float:left; margin-top:7px; margin-left: 7px;' href='Javascript: show_settings();'><img src='resources/settings_1.png' height=30px></a>
     <!--	<div id='infodiv' style='float:right;  color:Black; display:none;'></div>-->
     <!--<a style='float:right; margin-top:7px; margin-right: 7px; ' href='Javascript: show_settings();' id='regbut'><img
@@ -72,8 +72,8 @@
         <!--  <div id="pac-container"> -->
             <table width=100%><Tr><td style='color:Black;' align=center><b>დაწყება</b></td><td style='color:Black;' align=center><b>დასრულება</b></td></tr>
 
-			<Tr><td><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' ></td>
-			<td> <input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
+			<Tr><td align=center><input id="pac-input" type="text" placeholder="საწყისი მისამართი"  onfocus='setState(0);' onclick='this.select();' ></td>
+			<td  align=center><input id="pac-input2" type="text" placeholder="დანიშნულების მისამართი"  onfocus='setState(1);' onclick='this.select();'></td></tr>
 			</table>
 		
      <!--     </div>-->
@@ -145,7 +145,7 @@
 
 
     <div id="bottom_menu"
-         style=' width:210; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
+         style=' width:210px; position:fixed; bottom:0px; left:80px; height:31px; z-index:251; background-color:#ffce00;   '><!--filter: alpha(opacity=90);	-moz-opacity: 0.9; -khtml-opacity: 0.9;  opacity: 0.9; -->
     <!--  <img src='resources/phone.png'>-->
       <div id='info_text' name='info_text' style=' float:right; color:white; padding:5px; '></div>
 
