--- a/www/index.html
+++ b/www/index.html
@@ -125,7 +125,7 @@ td {
 		</div>
 
 
-		<div id='end_screen' style='position:fixed; bottom:200px; left:7%; width:80px; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:block; border-radius:5px; height:220px;'>
+		<div id='end_screen' style='position:fixed; bottom:200px; left:7%; width:80%; z-index:252; color:gray; background-color:white; padding:10px; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:block; border-radius:5px; height:300px;'>
 
 			<Center>
 			<a href='Javascript: card_pay();' style='background-color:blue; border-radius:5px; padding:10px; color:white; border-radius:5px;'>ბარათით გადახდა</a><Br>
