--- a/www/index.html
+++ b/www/index.html
@@ -140,7 +140,7 @@ td {
 				<Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote_empty.png' width=30px></a></td>
 				</tr></table>
 			<br><br>
-			<a href='Javascript: close_end_info();' style='border:1px solid gray; border-radius:3px; padding:10px; background-color:green; color:white;'>დახურვა</a>
+			<a href='Javascript: close_end_info();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>დახურვა</a>
 			
 			<center>
 			<Br><Br>
