--- a/www/index.html
+++ b/www/index.html
@@ -133,11 +133,11 @@ td {
 				<Br><br>
 				შესაფასეთ ჩვენი მომსახურება<br>
 				<table><tr>
-				<Td><a href='Javascript: vote(1, 0);'><img id='vote1' src='resources/vote_empty.png' width=30px></a></td>
-				<Td><a href='Javascript: vote(2, 0);'><img id='vote2' src='resources/vote_empty.png' width=30px></a></td>
-				<Td><a href='Javascript: vote(3, 0);'><img id='vote3' src='resources/vote_empty.png' width=30px></a></td>
-				<Td><a href='Javascript: vote(4, 0);'><img id='vote4' src='resources/vote_empty.png' width=30px></a></td>
-				<Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote_empty.png' width=30px></a></td>
+				<Td><a href='Javascript: vote(1, 0);'><img id='vote1' src='resources/vote0.png' width=30px></a></td>
+				<Td><a href='Javascript: vote(2, 0);'><img id='vote2' src='resources/vote0.png' width=30px></a></td>
+				<Td><a href='Javascript: vote(3, 0);'><img id='vote3' src='resources/vote0.png' width=30px></a></td>
+				<Td><a href='Javascript: vote(4, 0);'><img id='vote4' src='resources/vote0.png' width=30px></a></td>
+				<Td><a href='Javascript: vote(5, 0);'><img id='vote5' src='resources/vote0.png' width=30px></a></td>
 				</tr></table>
 			<br><br>
 			<a href='Javascript: close_end_info();' style='background-color:white; border:1px solid gray; display:block; width:150px; color:black; padding:5px;'>დახურვა</a>
