--- a/www/index.html
+++ b/www/index.html
@@ -52,6 +52,14 @@
 }
 
 
+.driver_profile
+{float:right;
+height:90px;
+border:2px solid white;
+margin-top:5px;
+}
+
+
 td {
   font-size: 10px;
 }
