--- a/www/index.html
+++ b/www/index.html
@@ -187,7 +187,7 @@ td {
 	<iframe id='myiframe' style="width:80%; height:80%; z-index:256; position:absolute; top:110px; left:7%; padding:10px;  background-color:white; box-shadow: 4px 4px 23px 0px rgba(0,0,0,0.75); display:none; border-radius:5px;"></iframe>
 
 
-	<div id='settings_sheet'  style=' position:fixed; left:50%; top:-10px; width:200px; margin-left:-100px; background: url(resources/gradacia.png); color:black; display:block;  border-radius:5px; z-index:1001; border:2px solid #5d5e62;'>
+	<div id='settings_sheet'  style=' position:fixed; left:50%; top:-10px; width:200px; margin-left:-100px; background: url(resources/gradacia.png); color:black; display:none;  border-radius:5px; z-index:1001; border:2px solid #5d5e62;'>
 		
 
 				<div id='mydiv'></div>
